@@ -8,27 +8,27 @@
 .deps
 /GNUmakefile
 /maint.mk
-INSTALL
+/INSTALL
 Makefile
 Makefile.in
-aclocal.m4
-build-aux
-config.status
-configure
-gunzip
-gzexe
-gzip
-gzip-*
-zcat
-zcmp
-zdiff
-zegrep
-zfgrep
-zforce
-zgrep
-zless
-zmore
-znew
+/aclocal.m4
+/build-aux
+/config.status
+/configure
+/gunzip
+/gzexe
+/gzip
+/gzip-*
+/zcat
+/zcmp
+/zdiff
+/zegrep
+/zfgrep
+/zforce
+/zgrep
+/zless
+/zmore
+/znew
 /GNUmakefile
 /maint.mk
 ChangeLog
