@@ -110,10 +110,12 @@ elif test $# -eq 2; then
 			    ( (gzip -cdfq -- "$2" 4>&-; echo $? >&4) 3>&- 5<&- </dev/null |
 			       eval "$cmp" /dev/fd/5 - >&3) 5<&0
 			)
+			cmp_status=$?
 			case $gzip_status in
 			  *[1-9]*) gzip_status=1;;
 			  *) gzip_status=0;;
 			esac
+			(exit $cmp_status)
 		    else
 			F=`expr "/$2" : '.*/\(.*\)[-.][zZtga]*$'` || F=$prog
 			tmp=
