@@ -4,6 +4,9 @@ GNU gzip NEWS                                    -*- outline -*-
 
 ** Bug fixes
 
+  zdiff would exit with status 2 (indicating an error) rather than 1 to
+  indicate differences when both inputs were compressed and different.
+
   zdiff would fail to print differences in two compressed inputs
 
 
